# Matchi-availability-bot

./: .gitignore  LICENSE  README.md  check_availability.py  email_notifications.py  facilities.py  pyproject.toml  quotes.csv  requirements.txt  tennis-searcher
email_templates/: base.html  daily_summary.html  new_courts.html  test_email.html
