[tool.poetry]
name = "matchi-observer"
version = "0.1.0"
description = ""
authors = ["Mathias <mathias@zerolytic.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
arrow = "^1.2.3"
tabulate = "^0.9.0"
rich = "^13.7.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
